--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ body {
   background-image: linear-gradient(khaki, orangered);
   background-color: #fff8dc;
 }
-p{
-  text-align: center;
-}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -14,16 +12,15 @@ ul {
     background-color: #333;
 }
 li {
-    float: left;
+    display:inline;
 }
 
-li a {
+a {
     display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding: 8px;
+    background-color: #dddddd;
 }
+
 li a:hover {
     background-color: #111;
 }
